--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -125,38 +125,62 @@ img {
       height: 120px !important;
       margin-left: calc(50% - 120px /2) !important; } }
 
-html, body {
-  min-height: 100%; }
-
-button, a, h1, h2, h3, h4, h5 {
+.info button, .info a, .info h1, .info h2, .info h3, .info h4, .info h5 {
   position: relative;
   display: block;
   text-align: center; }
 
-h1, h2, h3, h4, h5 {
+.info h1, .info h2, .info h3, .info h4, .info h5 {
   font: italic 900 40px Lato, Arial, sans-serif;
   color: #eeeeee;
   padding: 0;
   margin: 0; }
 
-h1 {
+.info h1 {
   font-size: 36px;
   line-height: 30px; }
 
-h2 {
+.info h2 {
   font-size: 24px; }
 
-h3 {
+.info h3 {
   font-size: 18px; }
 
-h4 {
+.info h4 {
   font: 400 16px Lato, Arial, sans-serif;
   padding: 0;
   margin: 0; }
 
-h5 {
+.info h5 {
   font: 400 14px Lato, sans-serif;
   color: white; }
+
+@media screen and (max-width: 1325px) {
+  .info #rep > h2 {
+    margin-bottom: 20px; }
+  .info #rank > h2 {
+    margin-bottom: 15px; }
+  .info h1 {
+    font-size: 28px; }
+  .info h2 {
+    font-size: 19px; }
+  .info h3 {
+    font-size: 15px; }
+  .info h4 {
+    font-size: 13px; }
+  .info h5 {
+    font-size: 12px; } }
+
+@media screen and (max-width: 1100px) {
+  .info h1 {
+    font-size: 23px; }
+  .info h2 {
+    font-size: 16px; }
+  .info h3 {
+    font-size: 14px; } }
+
+html, body {
+  min-height: 100%; }
 
 .info a {
   padding: 0 25px; }
@@ -511,28 +535,4 @@ h5 {
 
 #matches > div:first-of-type {
   background-image: url("/Images/stat_matches.png"); }
-
-@media screen and (max-width: 1325px) {
-  #rep > h2 {
-    margin-bottom: 20px; }
-  #rank > h2 {
-    margin-bottom: 15px; }
-  h1 {
-    font-size: 28px; }
-  h2 {
-    font-size: 19px; }
-  h3 {
-    font-size: 15px; }
-  h4 {
-    font-size: 13px; }
-  h5 {
-    font-size: 12px; } }
-
-@media screen and (max-width: 1100px) {
-  h1 {
-    font-size: 23px; }
-  h2 {
-    font-size: 16px; }
-  h3 {
-    font-size: 14px; } }
 
