--- a/Gobot/Gobot/Content/Register.css
+++ b/Gobot/Gobot/Content/Register.css
@@ -125,6 +125,60 @@ img {
       height: 120px !important;
       margin-left: calc(50% - 120px /2) !important; } }
 
+.info button, .info a, .info h1, .info h2, .info h3, .info h4, .info h5 {
+  position: relative;
+  display: block;
+  text-align: center; }
+
+.info h1, .info h2, .info h3, .info h4, .info h5 {
+  font: italic 900 40px Lato, Arial, sans-serif;
+  color: #eeeeee;
+  padding: 0;
+  margin: 0; }
+
+.info h1 {
+  font-size: 36px;
+  line-height: 30px; }
+
+.info h2 {
+  font-size: 24px; }
+
+.info h3 {
+  font-size: 18px; }
+
+.info h4 {
+  font: 400 16px Lato, Arial, sans-serif;
+  padding: 0;
+  margin: 0; }
+
+.info h5 {
+  font: 400 14px Lato, sans-serif;
+  color: white; }
+
+@media screen and (max-width: 1325px) {
+  .info #rep > h2 {
+    margin-bottom: 20px; }
+  .info #rank > h2 {
+    margin-bottom: 15px; }
+  .info h1 {
+    font-size: 28px; }
+  .info h2 {
+    font-size: 19px; }
+  .info h3 {
+    font-size: 15px; }
+  .info h4 {
+    font-size: 13px; }
+  .info h5 {
+    font-size: 12px; } }
+
+@media screen and (max-width: 1100px) {
+  .info h1 {
+    font-size: 23px; }
+  .info h2 {
+    font-size: 16px; }
+  .info h3 {
+    font-size: 14px; } }
+
 body, html {
   height: 100% !important; }
 
