--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -11,6 +11,7 @@ $menuColor_active_borderRight: #a84739;
 $menuColor_Ink: #a74232;
 
 $darkerGrey: #1f1f1f;
+$darkGrey2: #2d2d2d;
 $darkGrey: #323232;
 $grey: #626262;
 $lightGrey: #5f5f5f;
@@ -140,5 +141,46 @@ img                         { border: 0; }
         > h1, > a, > button { font-size: 20px !important; }
         > a, > button { margin-top: 20px !important; }
         > div { width: 120px !important; height: 120px !important; margin-left: calc(50% - 120px /2) !important; }
+    }
+}
+
+.info {
+    button, a, h1, h2, h3, h4, h5 {
+        position: relative;
+        display: block;
+        text-align: center;
+    }
+    
+    h1, h2, h3, h4, h5 { 
+        font: italic 900 40px $font;
+        color: $off-white; 
+        padding: 0;
+        margin: 0;
+    }
+    
+    h1 { font-size: 36px; line-height: 30px; }
+    h2 { font-size: 24px; }
+    h3 { font-size: 18px; }
+    h4 { font: 400 16px $font; padding: 0; margin: 0; }
+    h5 { font: 400 14px Lato, sans-serif; color: white;}
+}
+
+@media screen and (max-width: 1325px) {
+    .info {
+        #rep > h2 { margin-bottom: 20px; }
+        #rank > h2 { margin-bottom: 15px; }
+        h1 { font-size: 28px; }
+        h2 { font-size: 19px; }
+        h3 { font-size: 15px; }
+        h4 { font-size: 13px; }
+        h5 { font-size: 12px; }
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .info {
+        h1 { font-size: 23px; }
+        h2 { font-size: 16px; }
+        h3 { font-size: 14px; }
     }
 }
