--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -71,16 +71,16 @@
 
     <div class="team team1">
         <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
-        <div>
+        <div class="text">
             <h1>Cloud6</h1>
-            <h2>5000$</h2>
+            <h3>5000$</h3>
         </div>
     </div>
     <div class="vs"><h1>VS</h1></div>
     <div class="team team2">
-        <div>
+        <div class="text">
             <h1>LRG</h1>
-            <h2>5000$</h2>
+            <h3>5000$</h3>
         </div>
         <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
     </div>
@@ -106,16 +106,16 @@
 
     <div class="team team1">
         <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
-        <div>
+        <div class="text">
             <h1>Cloud6</h1>
-            <h2>5000$</h2>
+            <h3>5000$</h3>
         </div>
     </div>
     <div class="vs"><h1>VS</h1></div>
     <div class="team team2">
-        <div>
+        <div class="text">
             <h1>LRG</h1>
-            <h2>5000$</h2>
+            <h3>5000$</h3>
         </div>
         <div class="img" style="background-image: url(/Images/csgo.jpg);"></div>
     </div>
