--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -190,7 +190,10 @@
                 $("#closeOption").show();
                 
                 onResize();
-                posOptionTabs();
+                setTimeout(function() {
+                    posOptionTabs();
+                    $("#options").show();
+                }, 50);
             }
             else {
                 $("#options").remove();
