--- a/Gobot/Gobot/Content/Bet.css
+++ b/Gobot/Gobot/Content/Bet.css
@@ -42,7 +42,7 @@ img {
   opacity: 0; }
 
 .grey, grey {
-  color: #626262; }
+  color: #626262 !important; }
 
 .green, green {
   color: #51c24b; }
@@ -52,6 +52,12 @@ img {
 
 .white, white {
   color: white; }
+
+.orange, orange {
+  color: #ffbf5c; }
+
+.offw, offw {
+  color: #eeeeee; }
 
 #error_overlay, #js_error {
   position: fixed;
@@ -94,16 +100,6 @@ img {
       color: #eeeeee;
       border-color: #eeeeee; }
 
-.info {
-  position: relative;
-  float: left;
-  clear: both;
-  width: 85%;
-  max-width: 1350px;
-  height: auto;
-  background-color: #232323;
-  margin: 2px auto; }
-
 @media screen and (max-width: 1200px) {
   #error_overlay > div {
     width: 75%;
@@ -125,35 +121,38 @@ img {
       height: 120px !important;
       margin-left: calc(50% - 120px /2) !important; } }
 
-.info button, .info a, .info h1, .info h2, .info h3, .info h4, .info h5 {
+.info {
   position: relative;
-  display: block;
-  text-align: center; }
-
-.info h1, .info h2, .info h3, .info h4, .info h5 {
-  font: italic 900 40px Lato, Arial, sans-serif;
-  color: #eeeeee;
-  padding: 0;
-  margin: 0; }
-
-.info h1 {
-  font-size: 36px;
-  line-height: 30px; }
-
-.info h2 {
-  font-size: 24px; }
-
-.info h3 {
-  font-size: 18px; }
-
-.info h4 {
-  font: 400 16px Lato, Arial, sans-serif;
-  padding: 0;
-  margin: 0; }
-
-.info h5 {
-  font: 400 14px Lato, sans-serif;
-  color: white; }
+  float: left;
+  clear: both;
+  width: 85%;
+  max-width: 1350px;
+  height: auto;
+  background-color: #232323;
+  margin: 2px auto; }
+  .info button, .info a, .info h1, .info h2, .info h3, .info h4, .info h5 {
+    position: relative;
+    display: block;
+    text-align: center; }
+  .info h1, .info h2, .info h3, .info h4, .info h5 {
+    font: italic 900 40px Lato, Arial, sans-serif;
+    color: #eeeeee;
+    padding: 0;
+    margin: 0; }
+  .info h1 {
+    font-size: 36px;
+    line-height: 30px; }
+  .info h2 {
+    font-size: 24px; }
+  .info h3 {
+    font-size: 18px; }
+  .info h4 {
+    font: 400 16px Lato, Arial, sans-serif;
+    padding: 0;
+    margin: 0; }
+  .info h5 {
+    font: 400 14px Lato, sans-serif;
+    color: white; }
 
 @media screen and (max-width: 1325px) {
   .info #rep > h2 {
@@ -212,10 +211,16 @@ img {
   width: 200px;
   background: no-repeat center; }
 
-.team h1, .team h3 {
+.team h1, .team h4 {
   text-transform: uppercase; }
 
-.team1 h1, .team1 h3 {
+.team h4 {
+  line-height: 14px; }
+
+.team h4:first-of-type {
+  margin-top: 5px; }
+
+.team1 h1, .team1 h4 {
   text-indent: 10px;
   text-align: left; }
 
@@ -224,7 +229,7 @@ img {
   -webkit-clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%); }
 
-.team2 h1, .team2 h3 {
+.team2 h1, .team2 h4 {
   left: -10px;
   text-align: right; }
 
@@ -247,15 +252,15 @@ img {
     margin: 0; }
     .manageBet > div > div {
       display: none;
-      position: relative;
+      position: absolute;
       top: 0 !important;
-      width: 100px;
-      left: -100px;
+      width: auto;
       height: 100px;
       background-color: inherit; }
       .manageBet > div > div > h2 {
         text-transform: uppercase;
         font-weight: 400;
+        width: auto;
         height: 100px;
         line-height: 100px;
         padding-left: 20px; }
@@ -278,4 +283,52 @@ img {
     background-size: 32px 32px; }
   .manageBet > .edit:hover {
     background-size: 41px 32px; }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0; }
+
+#bet_chooseTeam {
+  height: 300px; }
+  #bet_chooseTeam > div:not(.separator) {
+    position: relative;
+    float: left;
+    display: block;
+    height: 100%;
+    width: 50%;
+    background: no-repeat center;
+    cursor: pointer; }
+  #bet_chooseTeam > div:not(.separator):hover {
+    background-size: 150%;
+    transition: 0.5s; }
+  #bet_chooseTeam > .separator {
+    position: absolute;
+    height: 100%;
+    width: 4px;
+    left: calc(50% - 2px);
+    background-color: #1f1f1f;
+    z-index: 999; }
+    #bet_chooseTeam > .separator > div {
+      position: relative;
+      height: 50px;
+      width: 50px;
+      background-color: #1f1f1f;
+      left: -24px;
+      -ms-transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+      transform: rotate(45deg); }
+
+#bet_placeBet {
+  height: 300px; }
+  #bet_placeBet > .teamImg {
+    position: relative;
+    float: left;
+    display: block;
+    height: 100%;
+    width: 40%;
+    background: no-repeat center;
+    cursor: pointer; }
 
