--- a/Gobot/Gobot/Content/Bet.scss
+++ b/Gobot/Gobot/Content/Bet.scss
@@ -39,11 +39,13 @@ $height: 100px;
         background: no-repeat center;
 
     }
-    h1, h3 { text-transform: uppercase; }
+    h1, h4 { text-transform: uppercase; }
+    h4 { line-height: 14px; }
+    h4:first-of-type { margin-top: 5px; }
 }
 
 .team1 {
-    h1, h3 { text-indent: 10px; text-align: left; }
+    h1, h4 { text-indent: 10px; text-align: left; }
     > .img {
         float: left;
         -webkit-clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
@@ -52,7 +54,7 @@ $height: 100px;
 }
 
 .team2 {
-    h1, h3 { left: -10px; text-align: right; }
+    h1, h4 { left: -10px; text-align: right; }
     > .img {
         position: relative;
         float: right;
@@ -76,16 +78,16 @@ $height: 100px;
 
         > div {
             display: none;
-            position: relative;
+            position: absolute;
             top: 0 !important;
-            width: 100px;
-            left: -100px;
+            width: auto;
             height: $height;
             background-color: inherit;
 
            > h2 {
                text-transform: uppercase;
                font-weight: 400;
+               width: auto;
                height: $height;
                line-height: $height;
                padding-left: 20px;
@@ -105,3 +107,93 @@ $height: 100px;
     > .create:hover, .remove:hover { background-size: 32px 32px; }
     > .edit:hover { background-size: 41px 32px; }
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
+$betH: 300px;
+#bet_chooseTeam {
+    height: $betH;
+
+    > div:not(.separator) {
+        position: relative;
+        float: left;
+        display: block;
+        height: 100%;
+        width: 50%;
+        background: no-repeat center;
+        cursor: pointer;
+    }
+        > div:not(.separator):hover {
+            background-size: 150%;
+            transition: 0.5s;
+        }
+
+    > .separator {
+            position: absolute;
+            height: 100%;
+            width: 4px;
+            left: calc(50% - 2px);
+            background-color: $darkerGrey;
+            z-index: 999;
+
+        > div {
+            $boxH: 50px;
+            position: relative;
+            height: $boxH;
+            width: $boxH;
+            background-color: $darkerGrey;
+            left: -($boxH / 2 - 1px);
+            @include rotate(45deg);
+        }
+    }
+}
+
+#bet_placeBet {
+    height: $betH;
+    
+    > .teamImg {
+        position: relative;
+        float: left;
+        display: block;
+        height: 100%;
+        width: 40%;
+        background: no-repeat center;
+        cursor: pointer;
+    }
+
+    > form {
+        > div:not(.betSelector) {
+            > h2:first-of-type {
+
+            }
+            > h2:last-of-type {
+
+            }
+        }
+
+        > input, > a {
+
+        }
+    }
+}
+    .betSelector {
+        > input {
+
+        }
+
+        > div {
+
+        }
+            > .sub {
+
+            }
+            > .add {
+
+            }
+    }
